--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-Revision history for Shutterstock-DB-Evented
+Revision history for DB-Evented
+
+0.02    02-20-2013
+        Pre-release various bug fixes
 
 0.01    02-20-2013
         Pre-release version
